@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-08T00:55:38Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 10,
+  "timestamp" : "2022-05-08T16:15:06Z",
+  "count" : 1,
+  "count_minmax" : [ 0, 1 ],
+  "count_prev_day_inc" : 11,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 7,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 8,
   "uniques_prev_day_dec" : 0
 }
