@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T00:55:38Z",
+  "timestamp" : "2022-05-08T16:15:06Z",
   "count_outdated" : 263,
   "uniques_outdated" : 129,
-  "count" : 281,
-  "uniques" : 144,
+  "count" : 282,
+  "uniques" : 145,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 1, 11 ],
       "uniques": 8,
       "uniques_minmax": [ 1, 8 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
