@@ -1,5 +1,5 @@
 {
-  "count": 18,
+  "count": 19,
   "uniques": 11,
   "clones": [
     {
@@ -31,6 +31,11 @@
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 11,
       "uniques": 8
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
